--- a/templates/exercise.html
+++ b/templates/exercise.html
@@ -81,7 +81,7 @@
                 // console.log("success")
               },
               error: function(xhr, type) {
-                console.log("error", xhr, type)
+                console.log(" logging error", xhr, type)
               }
           });
           //////
