question table update implemented

--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -169,7 +169,7 @@
                   <tr>
                       <th data-field="id" data-formatter="question_format">Question</th>
                       <th data-field="description">Question Description</th>
-                      <th data-field="timestamp">Last Tried</th>
+                      <th data-field="timestring">Last Tried</th>
                       <th data-field="status" data-formatter="status_format">Status</th>
                   </tr>
               </thead>
