--- a/templates/exercise.html
+++ b/templates/exercise.html
@@ -142,6 +142,14 @@
                       &larr;
                     {% elif line == '&rarr;' %}
                       &rarr;
+                    {% elif line == '&lt;' %}
+                      &lt;
+                    {% elif line == '&gt;' %}
+                      &gt;
+                    {% elif line == '&le;' %}
+                      &le;
+                    {% elif line == '&ge;' %}
+                      &ge;
                     {% else %}
                       {{line}}
                     {% endif %}
@@ -202,6 +210,14 @@
                                   &larr;
                                 {% elif line == '&rarr;' %}
                                   &rarr;
+                                {% elif line == '&lt;' %}
+                                  &lt;
+                                {% elif line == '&gt;' %}
+                                  &gt;
+                                {% elif line == '&le;' %}
+                                  &le;
+                                {% elif line == '&ge;' %}
+                                  &ge;
                                 {% else %}
                                   {{line}}
                                 {% endif %}
