--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -42,7 +42,7 @@
     {% endif %}
 
     <nav class="llab-nav navbar navbar-default navbar-fixed-top" role="navigation">
-      <div class="nav navbar-nav navbar-left navbar-title">CS10 AutoQuiz | Fall 2017 | UC Berkeley</div>
+      <div class="nav navbar-nav navbar-left navbar-title">CS10 AutoQuiz | Spring 2018 | UC Berkeley</div>
       <div class="nav navbar-nav navbar-right">
         <ul class="nav-btns btn-group">
           <!--a class="btn btn-default" href="url_for('default_entry')">logout</a-->
